# sek

./: .gitignore  Cargo.toml  LearningResources.md  README.md
src/: cli.rs  cli.rs.derive  commands.rs  config.rs  main.rs
test_data/agnosticd/4.x/: my_vars.yml
test_data/agnosticd/jwm_bad_kubeconfig/: ocp4-cluster_bad_kubeconfig
test_data/agnosticd/partialentry/: ocp4-cluster_jwm0603ocp413a_kubeconfig
test_data/agnosticd/partialentry3/: ocp4-cluster_jwm0603ocp413a_kubeadmin-password
